--- a/WebApplication2/Web.config
+++ b/WebApplication2/Web.config
@@ -31,6 +31,7 @@
 				<add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/"/>
 			</providers>
 		</roleManager>
+		<trace enable="true"/>
 	</system.web>
 	<system.webServer>
 		<modules runAllManagedModulesForAllRequests="true"/>
